# APar

./: .gitignore  APar.cabal  README.md
src/Text/: APar.hs
src/Text/APar/: Prim.hs
