name:                APar
version:             0.0.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ailrun/APar#readme
license:             BSD3
license-file:        LICENSE
author:              Junyoung Clare Jang
maintainer:          jjc9310@gmail.com
copyright:           Copyright, 2016 Junyoung Clare Jang
category:            Parser, Language, Text, Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.APar
                     , Text.APar.Prim
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ailrun/APar
